# Amethyst-Launcher-Website-Old

./: .gitignore  Cargo.toml  README.md  Rocket.toml  update.sh
.github/workflows/: build.yml
document/: index.md  install-game.md  instance-manage.md  launch-game.md  mod-loader.md  quick-start.md  resource-manager.md
document/cli/: install-game.md
public/assets/: global.css  guide.css  main.css  navbar.css
src/: main.rs
src/controller/: guide.rs
src/router/: api.rs  web.rs
templates/: download.html.hbs  guide.html.hbs  index.html.hbs  market.html.hbs
