[package]
name = "magical-launcher-website"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "=0.5.0-rc.3"
# once_cell = "^1.7"
reqwest = { version = "0.11", features = ["json"] }
# serde_json = "1.0"
# serde = { version = "1.0", features = ["derive"] }
# [dependencies.rocket_contrib]
# version = "0.4.10"
# default-features = false
# features = ["handlebars_templates", "tera_templates", "uuid", "helmet"]
[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["handlebars", "tera"]
