[package]
name = "amethyst-launcher-website"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "=0.5.1"
once_cell = "1.19.0"
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
pulldown-cmark = "0.12.0"
anyhow = "1.0"
# rocket_upload = "0.1.0"

[dependencies.rocket_dyn_templates]
version = "=0.2.0"
features = ["handlebars", "tera"]
